support CEILING/FLOOR expressions